--- a/Azoft/MNIST/Azoft-test-mnist.ipynb
+++ b/Azoft/MNIST/Azoft-test-mnist.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Данная задача очень сильно опирается на пример из keras: examples/mnist_cnn.py. \n",
     "\n",
@@ -71,7 +74,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -107,6 +112,13 @@
    "source": [
     "def cut_number(number, proportion):\n",
     "    number[(1.0 - proportion)*img_rows:] = 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Собственно здесь подготавливаются \"датасеты\". Берём mnist, делаем reshape (в соответсвии с параметрами входных слоёв в keras'е), и стираем %proportion часть строк"
    ]
   },
   {
@@ -161,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Здесь всё, как в примере: свёрточная сеть (conv2d->conv2d->maxpool->fc и пара dropout'ов), метрика, естественно, кросс-энтропия"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -192,7 +211,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -223,7 +244,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -238,7 +261,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -272,7 +297,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -302,7 +329,9 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -324,7 +353,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
